<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Allowance</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="view_transactions">View Transactions</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_description">Transaction Description</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="empty">No transactions.\nYour piggy bank is laughing at you.</string>
    <string name="empty_transaction">Really, a $0 transaction? Shenanigans.</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Enter the transaction amount and description below, then tap the button to add it.</string>
    <string name="spend_responsibly">Spend responsibly.</string>

</resources>
