<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/fragment_transaction"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.smockle.allowance.MainActivity$TransactionFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/transaction_amount"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/transaction_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_description"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/add_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/add_transaction" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="3"
        android:layout_gravity="bottom"
        android:text="@string/spend_responsibly"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="10dp"/>

</LinearLayout>
