<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">
    <TextView
        android:id="@+id/transaction_amount"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        android:text="@string/transaction_amount"
        android:paddingRight="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/transaction_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_description"
            android:gravity="right"/>
        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_date"
            android:gravity="right"/>
    </LinearLayout>
</LinearLayout>